-------------------------------------------------------------------------------------------------------------------
Version 1.0-beta-7
	- Added steps to form duplication process. When a form is duplicated the steps will get duplicated too.
	- Added support for the GRAVITY_FLOW_LICENSE_KEY constant.
	- Added French translation.
	- Fixed a permissions issue in the print functionality.
	- Fixed some warnings and inaccurate counts when displaying orphaned entries.
	- Fixed and issue with the user input step where re-assignment doesn't happen if the step is still in progress.
	- Fixed debug warnings on the status page when no feeds have been configured.
	- Fixed a style issue with the front-end detail page.
	- Fixed some style issues with the status shortcode.
	- Fixed an issue with the print function.
	- Removed the license key and background updates settings from the settings page on multisite installations when the key is set in the GRAVITY_FLOW_LICENSE_KEY constant.
	- Removed the delete action from the step list for steps with entries so entries don't get orphaned. Either delete the entries or cancel the workflow for each of the entries.

-------------------------------------------------------------------------------------------------------------------
Version 1.0-beta-6
	- Added the status page to the shortcode and added the page attribute to the gravityflow shortcode.
	Examples:
		- [gravityflow page="inbox"]
		- [gravityflow page="status"]
	- Added Gravity_Flow_API to provide the basis of a future-proof way for developers to interact with a Gravity Flow installation. See http://inlinedocs.gravityflow.io for the class documentation.
	- Updated installation process to redirect to the settings page / installation wizard after single plugin activation.
    - Fixed an issue with the step configuration page where the minified JavaScript doesn't load correctly causing the functionality in the page to break.
